<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/phone_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Spinner
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/phone_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:gravity="center"
                android:inputType="none"
                android:focusable="false"
                android:text="+7" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:lines="1"
                android:layout_gravity="center_vertical"
                android:hint="@string/prompt_phone"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_repeat_password"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/prompt_first_name"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/prompt_last_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/action_back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corners_edge_button_drawable"
            android:elevation="8dp"
            android:text="@string/action_back"/>

        <Button
            android:id="@+id/action_finish"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corners_button_drawable"
            android:backgroundTint="@color/colorAccent"
            android:elevation="8dp"
            android:text="@string/action_finish"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/sign_up_by_email"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/sign_up_by_email"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/sign_up_by_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/sign_up_by_phone"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>