<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="32dp"
    android:paddingEnd="32dp"
    android:paddingStart="32dp"
    android:paddingTop="32dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/sign_in_by_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_qrcode"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/phone_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Spinner
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/phone_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:lines="1"
                android:text="+7" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:lines="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/action_next"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners_button_drawable"
        android:backgroundTint="@color/colorAccent"
        android:elevation="8dp"
        android:text="@string/action_next"
        android:textColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sign_in_by_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in_by_email"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/sign_in_by_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in_by_phone"
            android:textColor="@color/colorAccent"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>