<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/foot_parameters_result_f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/processed_imageview_result_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/foot_parameters"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stick_length"
                android:layout_marginStart="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/stick_length_result_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0 mm"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:text="@string/ball_width" />

            <TextView
                android:id="@+id/ball_width_result_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0 mm"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin">


        <Button
            android:id="@+id/buttonBad_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorDecline"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="3"
            android:text="@string/Rescan" />

        <Button
            android:id="@+id/buttonOk_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccept"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="3"
            android:text="@string/OK" />
    </LinearLayout>


</RelativeLayout>
