<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tryfit.scanning.ScannerActivity">

    <RelativeLayout
        android:id="@+id/no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_above="@+id/connect_instructions"
            android:text="@string/no_connection_to_scanner"/>

        <TextView
            android:id="@+id/connect_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/action_reconnect"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="12dp"
            android:text="@string/connection_instructions" />

        <Button
            android:id="@+id/action_reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorAccent"
            android:maxLines="1"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/textColorLight" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:visibility="gone"/>


</RelativeLayout>
