<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.tryfit.login.SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:src="@mipmap/main_logo" />

    <Button
        android:id="@+id/action_launch_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorBackground"
        android:maxLines="1"
        android:text="@string/prompt_launch_demo"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tryfit_copyright"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/action_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorAccent"
            android:maxLines="1"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/textColorLight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/or_start_scanning"
            android:visibility="gone"/>

        <Button
            android:id="@+id/action_scan_using_camera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorAccent"
            android:lines="2"
            android:maxLines="1"
            android:text="@string/prompt_scan_using_camera"
            android:textAllCaps="false"
            android:textColor="@color/textColorLight"
            android:visibility="gone"/>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<Button-->
        <!--android:id="@+id/action_scan_using_scanner"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:backgroundTint="@color/colorAccent"-->
        <!--android:text="@string/prompt_connect_to_scanner"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/textColorLight" />-->

        <!--<Button-->
        <!--android:id="@+id/action_scan_using_emulator"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:backgroundTint="@color/colorAccent"-->
        <!--android:text="@string/prompt_connect_to_emulator"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/textColorLight" />-->

        <!--<Button-->
        <!--android:id="@+id/action_scan_using_camera"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:backgroundTint="@color/colorAccent"-->
        <!--android:lines="2"-->
        <!--android:maxLines="1"-->
        <!--android:text="@string/prompt_scan_using_camera"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/textColorLight"-->
        <!--android:visibility="gone" />-->
        <!--</LinearLayout>-->

    </LinearLayout>

    <TextView
        android:id="@+id/tryfit_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/tryfit_copyright"
        android:textColor="@color/textColorDarkGray"
        android:textSize="10sp" />

</RelativeLayout>
